# robot-algo

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.bat  build.sh
include/convex_decomposition/: convex_decomposition.h  quickhull.h
include/geometry/: algebra.h  kd_tree.h
include/heuristics/: genetic_algo.h
include/path_planning/: nurbs.h  probabilistic_roadmap.h
include/user_interface/: fileio.h  random.h  timer.h  user_interface.h
script/: .gitignore  README.md  requirements.txt
script/IO/: __init__.py
script/user_interface/: __init__.py  kinematics.py  matrixIO.py  plotUtils.py
script/visualization/: interpolate_algorithm.py  plot_gjk.py  plot_kdtree.py  plot_nurbs.py  plot_pca.py  plot_prm.py  plot_qkhull.py  plot_robot.py  plot_tsp.py
src/: CMakeLists.txt
src/collision_detection/: CMakeLists.txt  README.md  gjk.cpp
src/collision_detection/include/collision_detection/: gjk.h
src/collision_detection/src/: gjk.cpp
src/convex_decomposition/: CMakeLists.txt  quickhull.cpp
src/convex_decomposition/include/convex_decomposition/: convex_decomposition.h  quickhull.h
src/convex_decomposition/src/: quickhull.cpp
src/data_processing/: CMakeLists.txt
src/data_processing/example/: butterworth.cpp  butterworth.py
src/data_processing/include/data_processing/: filter.h
src/data_processing/src/: filter.cpp
src/geometry/: CMakeLists.txt  algebra.cpp  kd_tree.cpp
src/geometry/include/geometry/: algebra.h  algebra.hpp  geometry.h  kd_tree.h  transform.h  transform.hpp  transformation.h
src/geometry/src/: algebra.cpp  geometry.cpp  kd_tree.cpp  transform.cpp  transformation.cpp
src/geometry/test/: test_transform.cpp
src/heuristics/: CMakeLists.txt  genetic_algo.cpp
src/heuristics/include/heuristics/: genetic_algo.h  heuristics.h
src/heuristics/src/: genetic_algo.cpp
src/path_planning/: CMakeLists.txt  README.md  nurbs.cpp  probabilistic_roadmap.cpp
src/path_planning/example/: bezier.cpp  bezier.py  discrete_trajectory_decomposition.cpp  discrete_trajectory_decomposition.py  look_ahead_visual.cpp  look_ahead_visual.py  swing_visual.cpp  swing_visual.py
src/path_planning/include/path_planning/: curve_decomposition.h  nurbs.h  probabilistic_roadmap.h  swing.h
src/path_planning/src/: curve_decomposition.cpp  nurbs.cpp  probabilistic_roadmap.cpp  swing.cpp
src/robot_prototype/: CMakeLists.txt  README.md
src/robot_prototype/example/: robotic_system_base.cpp  tool_axis_calibration.cpp
src/robot_prototype/include/robot_prototype/: kinematics.h  robot_base.h  robotic_system_base.hpp
src/robot_prototype/src/: kinematics.cpp  robot_base.cpp
src/robot_prototype/test/: test_kinematics.cpp
src/test/: CMakeLists.txt  robot_prototype_robot_base.cpp  test_algebra.cpp  test_ga.cpp  test_gjk.cpp  test_kdtree.cpp  test_nurbs.cpp  test_pca.cpp  test_probabilistic_roadmap.cpp  test_qkhull.cpp  test_transform.cpp
src/user_interface/: CMakeLists.txt  fileio.cpp  random.cpp  timer.cpp
src/user_interface/include/user_interface/: fileio.h  random.h  timer.h  user_interface.h
src/user_interface/src/: fileio.cpp  random.cpp  timer.cpp
